<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".menumodule.MenuActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/ic_information"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/container_btn_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_btn_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/container_btn_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDailyChallenge"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:background="@drawable/bg_button_daily"
            android:text="@string/daily_challenge"
            app:layout_constraintEnd_toStartOf="@+id/btnCommonChallenge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCommonChallenge"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:background="@drawable/bg_button_common"
            android:text="@string/common_challenge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnDailyChallenge"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_btn_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/imageFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_btn_up">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnProfile"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:background="@drawable/bg_button_profile"
            android:text="@string/profile"
            app:layout_constraintEnd_toStartOf="@+id/btnAchievements"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAchievements"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:background="@drawable/bg_button_achievements"
            android:text="@string/achievements"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnProfile"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageFooter"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ic_information"
        android:src="@drawable/ic_stadics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_btn_down" />

</androidx.constraintlayout.widget.ConstraintLayout>